--- a/ToDoListTask/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ToDoListTask/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -30,7 +30,7 @@
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="TODO" asp-action="ToDoList">ToDoList</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="TODO" asp-action="AddToDo">AddToDo</a>
+                            <a class="btn btn-danger btn-delete asp-area="Admin" asp-controller="TODO" asp-action="AddToDo">AddToDo</a>
                         </li>
                     </ul>
                 </div>
