--- a/ToDoListTask/Areas/Admin/Views/ToDo/ToDoList.cshtml
+++ b/ToDoListTask/Areas/Admin/Views/ToDo/ToDoList.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<ToDoListTask.Models.ToDoList>
+﻿
+@model List<ToDoListTask.Models.ToDoList>
 
 <h1>welcome to your ToDos @ViewBag.UserName</h1>
 
